# magnus-carlsten

./: .gitignore
src/: CHECKLIST.md  CMakeCache.txt  CMakeLists.txt  DEBUGGING_GUIDE.md  ENGINE_README.md  HYBRID_NNUE.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_REFERENCE.py  README.md  STOCKFISH_INTEGRATION.md  build_engine.sh  build_onnx.sh  chess_engine.cpp  chess_engine_onnx.cpp  cmake_install.cmake  export_model.py  export_model_onnx.py  export_model_tflite.py  main.py  model.onnx  model_config.txt  model_partial.onnx  nnue_evaluator.cpp  nnue_evaluator.hpp  run_lldb.sh  stockfish.py  test_engine.py  test_nnue.txt  test_performance.sh
training/: IMPLEMENTATION.md  MODAL_TRAINING.md  MODEL_DEPLOYMENT.md  MODIFICATIONS.md  QUICKSTART.md  README.md  STREAMING_MODE.md  SUMMARY.md  THIS_IS_IT.md  dataset.py  deploy_model.sh  evaluate.py  features.py  hardwaretest.py  nnue_model.py  requirements.txt  setup.sh  test_all.py  train.py
training/models/: nnue_best.pt
trainingData/: partition_data_pandas.py
